2008-05-08  David Smith  <dsmith@redhat.com>

	PR 6500.
	* task_finder.c (__stp_utrace_task_finder_report_exec): Moved
	attach logic to __stp_utrace_attach_match_filename().
	(__stp_utrace_attach_match_filename): New function.
	(__stp_utrace_task_finder_report_clone): Calls
	__stp_utrace_attach_match_filename() to attach to newly cloned
	threads.

2008-05-06  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 5648
	* print_old.c (stp_print_flush): Fix unaligned access warning on
	ia64.
	* print_new.c (stp_print_flush): Ditto.

2008-05-06  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 5648
	* vsprintf.c (_stp_vsnprintf): Fix memcpy's endianess issue.

2008-05-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 6481.
	* time.c (__stp_time_timer_callback): Reenable irq's before
	mod_timer.

2008-05-05  David Smith  <dsmith@redhat.com>

	* task_finder.c (stap_utrace_detach_ops): Make sure we ignore
	/sbin/init.
	(__stp_utrace_attach): Added function to handle details of
	attaching a utrace engine.
	(__stp_utrace_task_finder_report_clone): Calls
	__stp_utrace_attach.
	(__stp_utrace_task_finder_report_exec): Ditto.
	(stap_start_task_finder): Ditto.

2008-04-30  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 5648
	From Shaohua Li <shaohua.li@intel.com>
	* vsprintf.c (_stp_vsnprintf): Fix unaligned access warning on ia64.

2008-04-29  David Smith  <dsmith@redhat.com>

	* task_finder.c: Made more robust by ensuring that all utrace
	attaches have a corresponding utrace detach.

2008-04-28  Frank Ch. Eigler  <fche@elastic.org>

	* runtime.h (TEST_MODE): Remove.

2008-04-25  David Smith  <dsmith@redhat.com>

	From Srinivasa <srinivasa@in.ibm.com>
	* task_finder.c (__stp_get_mm_path): Fixed kernel 2.6.25 change.

2008-04-24  David Smith  <dsmith@redhat.com>

	* task_finder.c (__stp_get_mm_path): Made kernel 2.6.25 changes.

2008-04-16  David Smith  <dsmith@redhat.com>

	* task_finder.c (__stp_get_mm_path): Made kernel 2.6.18 changes.

2008-04-15  David Smith  <dsmith@redhat.com>
