@@ -1,3 +1,14 @@
+2008-05-16  David Smith  <dsmith@redhat.com>
+
+	PR 6499.
+	* task_finder.c (stap_register_task_finder_target): Added error
+	check.
+	(__stp_utrace_task_finder_report_clone): Ditto.
+	(stap_utrace_detach_ops): Uses do_each_thread/while_each_thread
+	instead of for_each_process (which only iterated among process
+	group leaders instead of all threads).
+	(stap_start_task_finder): Ditto.
+
 2008-05-08  David Smith  <dsmith@redhat.com>
 
 	PR 6500.
